--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,12 @@
             <artifactId>aerospike-jdbc</artifactId>
             <version>1.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>info.picocli</groupId>
+            <artifactId>picocli</artifactId>
+            <version>4.6.3</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.spockframework</groupId>
